상담메세지 채팅장 사이즈

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -993,6 +993,7 @@
   border-radius: 2px;
   padding: 0px;
   height: 40px;
+  margin-top:20px;
   float: right;
 }
 
@@ -2104,7 +2105,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* width: 1200px; */
+  width: 1000px;
   z-index: 2;
 }
 
@@ -3410,7 +3411,7 @@
   color: #777;
 }
 .chat-container {
-  /* width: 440px; */
+  width: 440px;
   /* height: 700px; */
   height:100%;
   border-radius: 10px;
@@ -3430,7 +3431,7 @@
   background-color: #fddc00;
   padding:20px;
   text-align: center;
-  font-size: 22px;
+  font-size: 20px;
   letter-spacing: -1px;
   font-family: NotoSansMedium;
   border-top-left-radius: 10px;
@@ -3445,7 +3446,7 @@
   display: inline-block;
 }
 .chat-item-image img {
-  width: 70px;
+  width: 65px;
 }
 .chat-item-content {
   display: inline-block;
@@ -3457,7 +3458,7 @@
   width: 100%;
 }
 .chat-item-top-title {
-  font-size: 22px;
+  font-size: 20px;
   letter-spacing: -1px;
   font-family: NotoSansBold;
 }
@@ -3469,7 +3470,7 @@
   color: #b1b1b1;
 }
 .chat-item-bottom {
-  font-size: 18px;
+  font-size: 16px;
   letter-spacing: -1px;
   font-family: NotoSansMedium;
   color: #999999;
@@ -3956,7 +3957,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 1200px;
+  width: 900px;
   z-index: 2;
 }
 
