--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -3894,15 +3894,15 @@
   font-size: 17px;
 }
 
-.snsLayout .snsInputBox {
+/* .snsLayout .snsInputBox {
   width: 100%;
   height: 380px;
-}
+} */
 .snsLayout .snsInputBox {
   width: 558px;
-  height: 200px;
   margin-top: 10px;
   margin-left: -10px;
+  padding-bottom: 100px;
 }
 
 .snsLayout .dataTableLayout-01 {
