공지사항 카테고리 추가 작업 및 일부 수정

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -719,6 +719,11 @@
   width: 130px;
 }
 
+.registNoticeWrapper .subTitle {
+  width: 130px;
+  margin-left: 50px;
+}
+
 .registNoticeCheck {
   display: inline-block;
   margin-left: 20px;
@@ -792,6 +797,10 @@
   width: 130px;
   height: 40px;
   font-size: 18px !important;
+}
+
+.registNoticeDialog .importantBox .ant-checkbox-wrapper {
+  margin-left: 0px !important;
 }
 
 /* 할증 dialog */
