일차감 기사추가,삭제 api 작업완료

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2160,6 +2160,10 @@
   display: none; /* Chrome, Safari, Opera*/
 }
 
+.taskScheduler-inner .ant-table-expanded-row .ant-table-row {
+  display: inline-block;
+}
+
 .listBlock {
   margin-top: 20px;
 }
