--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -276,12 +276,22 @@
 /* 지도 관제 dialog */
 .map-Dialog {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  /* transform: translate(-50%, -50%); */
+  /* width: 100%;
+  height: 100%; */
+  z-index: 2;
+}
+
+.map-Dialog .mapLayout {
+  width: 100vw;
+  height: 100vh;
+}
+
+.map-Dialog .mapLayout .map-navermap {
   width: 100%;
   height: 100%;
-  z-index: 2;
 }
 
 .map-Dialog .layout::-webkit-scrollbar {
@@ -296,8 +306,8 @@
 
 .map-content {
   background-color: white;
-  height: 100%;
-  width: 100%;
+  /* height: 100vh;
+  width: 100vw; */
 }
 
 .map-title {
@@ -311,8 +321,8 @@
 
 .map-close {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 30px;
+  right: 50px;
   z-index: 90;
   width: 30px;
   cursor: pointer;
@@ -332,9 +342,9 @@
 }
 
 .map-inner {
-  width: 100%;
-  height: 100%;
-  margin-top: -30px;
+  /* width: 100%;
+  height: 100%; */
+  /* margin-top: -30px; */
   /* border: 1px solid #ccc;  */
   text-align: left;
 }
