--- a/src/css/order.css
+++ b/src/css/order.css
@@ -64,7 +64,7 @@
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   width: 100%;
-  height: 1000px;
+  height: 100%;
 }
 
 .riderName {
