--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,10 @@
+@media screen and (min-width: 1600px) {
+  .desk {
+  }
+
+  .mobile {
+    display: none !important;
+  }
 
 body {
   margin: 0;
@@ -300,3 +307,4 @@ body {
  
 }
 
+}
