모바일준비

--- a/src/css/index_m.css
+++ b/src/css/index_m.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1199px) and (min-width:300px){
     .desk {
         display: none !important;
     }
