상단 메뉴 및 가맹점 table 모바일

--- a/src/css/index_m.css
+++ b/src/css/index_m.css
@@ -190,6 +190,7 @@
       }
       
       .menu-wrapper {
+        padding-top:30px;
       }
       .menu-right {
         position: absolute;
@@ -198,11 +199,10 @@
       }
       .top-menu {
         display: inline-block;
-        margin: 0px 15px;
-        padding: 0px 15px;
+        margin: 0px 5px;
         cursor: pointer;
         font-family: NotoSansRegular;
-        font-size: 18px;
+        font-size: 14px;
         color: #fff;
         font-weight: normal;
       }
@@ -302,6 +302,9 @@
         width:300px;  
         margin-bottom:50px;
        
+      }
+      .ant-layout-header{
+        line-height: 30px!important;
       }
       
   
