--- a/src/css/order_m.css
+++ b/src/css/order_m.css
@@ -138,4 +138,18 @@
   .rider-blind-btn {
     width: 100px;
   }
+
+  /*가맹점관리-*/
+  .dataTableLayout2 {
+    width: 310px;
+    margin-top: 20px;
+  }
+  .ant-table-row-expand-icon-cell{
+    width:20px!important;
+  }
+  .franchiseContainer{
+    width:310px;
+    overflow:scroll;
+  }
+ 
 }
