--- a/src/css/common_m.css
+++ b/src/css/common_m.css
@@ -37,9 +37,17 @@
   .ant-table-tbody > tr > td > .ant-table-wrapper:only-child .ant-table {
     margin: 0px !important;
   }
-  .ant-table-thead > tr > th {
-    padding: 5px 5px !important;
+  .ant-table-thead > tr > th:first-child {
+    padding: 5px !important;
+    height:40px!important;
   }
+
+  .ant-table-container table > thead > tr:first-child th:first-child{
+    width:5%!important;
+    /* border:1px solid #fff; */
+  }
+
+
   .ant-table-expanded-row .ant-table-thead > tr > th {
     background-color: #e0e0e0 !important;
     color: #000 !important;
