--- a/src/css/order.css
+++ b/src/css/order.css
@@ -82,8 +82,7 @@
     color: blue;
     text-decoration: underline;
   }
-
-  .reception-box .ant-checkbox-inner {
+  .reception-box .reception-box .ant-checkbox-inner {
     width: 25px;
     height: 25px;
   }
@@ -121,6 +120,9 @@
     margin-top: 20px;
   }
 
+  #reception-table {
+    margin-top: 40px;
+  }
   #reception-table .ant-table .ant-table-tbody > tr > td:first-child {
     padding-left: 20px !important;
   }
@@ -129,5 +131,8 @@
   }
   #reception-table .ant-table .ant-table-thead > tr > th:last-child {
     padding-right: 20px !important;
+  }
+  .tableSub {
+    width: 150px;
   }
 }
