가맹 ui 세부작업

--- a/src/css/franchise_m.css
+++ b/src/css/franchise_m.css
@@ -49,6 +49,10 @@
     width: 308px;
   }
 
+  .blind-mobilebtn{
+    margin-left:10px;
+  }
+
 
       /* 상세 */
       /* .franchiseContainer .ant-table-tbody > tr > td > 
