--- a/src/css/order_m.css
+++ b/src/css/order_m.css
@@ -128,6 +128,9 @@
   .riderMain-container {
     width: 100%;
   }
+  .selectRiderBox {
+    margin-top: 30px;
+  }
   .dataTableLayout {
     margin-top: 20px;
   }
