일차감 속성 칼럼 추가 및 일차감 등록 속성 항목 추가

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2435,6 +2435,13 @@
     margin-left: 5px;
   }
 
+  .taskWork-list-01 .selectItem {
+    margin: 0;
+    vertical-align: middle;
+    display: inline-block;
+    width: 250px;
+  }
+
   .taskWork-list-01 .taskWorkSub {
     width: 90px;
     font-size: 16px;
