접수현황 상단버튼, 검색 작업

--- a/src/css/order_m.css
+++ b/src/css/order_m.css
@@ -6,20 +6,21 @@
   .mobile {
   }
 
-  /* .tabBtn {
+  .tabBtn {
     margin-left: 10px;
-  } */
+  }
 
   .arriveArea {
     text-align: left;
   }
 
-  .delayTab {
+  .mapTab {
     margin-left: 0px !important;
+    width:145px;
   }
 
-  .orderTab {
-    margin-right: 20px !important;
+  .registTab {
+    width:145px;
   }
 
   .filterTab {
