--- a/src/css/modal_m.css
+++ b/src/css/modal_m.css
@@ -175,7 +175,8 @@
     margin-left:10px!important;
   }
   .inputBox-searchFranchise .searchFranchiseInput {
-    width: 180px !important;
+    width: 170px !important;
+    margin-left:10px;
   }
 
   /* 우편번호 팝업 */
@@ -184,7 +185,7 @@
     top: 20%;
     left: 48%;
     transform: translate(-50%, -50%);
-    width: 530px;
+    width: 320px;
     border-radius: 30px;
     z-index: 3;
   }
@@ -1072,13 +1073,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 1300px;
+    width: 320px;
     border-radius: 30px;
     z-index: 3;
   }
   .registCall-container {
     background-color: white;
-    padding: 30px;
+    padding: 10px;
     text-align: left;
     color: #777;
   }
@@ -1106,7 +1107,7 @@
     /* height: 725px;  */
     overflow-y: scroll;
     border: 1px solid #ccc;
-    padding: 20px;
+    /* padding: 20px; */
     text-align: left;
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
@@ -1120,14 +1121,15 @@
   }
   /* 왼쪽 wrappper */
   .registCallWrapper {
-    padding: 0 30px;
+    padding: 10px;
   }
   .registCallWrapper .mainTitle {
     display: inline-block;
     vertical-align: middle;
     font-weight: bold;
-    width: 120px;
+    width: 100px;
   }
+
   .mainTitle.sub {
     display: inline-block;
     font-size: 18px;
@@ -1139,7 +1141,7 @@
     margin-top: 15px !important;
   }
   .registCallLayout .contentBlock {
-    margin-top: 15px;
+    margin-top: 8px;
   }
   .contentBlock .ant-form-item {
     margin-bottom: 0px;
@@ -1175,7 +1177,7 @@
   }
   .contentBlock .override-input {
     margin-left: 20px;
-    width: 400px;
+    width: 150px;
   }
   .callTab {
     float: right;
@@ -1184,7 +1186,6 @@
   .registCallWrapper > div:last-child {
     margin-top: 0;
     vertical-align: top;
-    margin-left: 50px;
   }
   /* 오른쪽 wrappper */
   .registCallWrapper.sub {
@@ -1219,8 +1220,8 @@
     margin-top: 12px;
   }
   .registCallLayout .mapLayout {
-    margin-top: 20px;
-    height: 400px;
+    /* margin-top: 20px; */
+    /* height: 100px; */
   }
   /* .registCallLayout #myMap {
     width: 895px;
@@ -3858,7 +3859,7 @@
     /* width: 1000px; */
     z-index: 2;
     background-color: white;
-    padding: 30px;
+    padding: 10px;
     text-align: left;
     color: #777;
   }
@@ -3915,8 +3916,8 @@
     right: 0;
   }
   .split-payment-box {
-    padding: 25px 20px 15px 20px;
-    width: 410px;
+    padding: 25px 0px 15px 0px;
+    width: 250px;
     height: auto;
   }
   .split-payment-box div {
@@ -3934,7 +3935,7 @@
     text-align: center;
   }
   .orderPayment-wrapper {
-    display: flex;
+    display: inline-block;
   }
   .orderPayments-wrapper {
     display: flex;
