요금관련 UI수정, 남은시간 표기 등

--- a/src/css/order.css
+++ b/src/css/order.css
@@ -103,7 +103,7 @@
   }
 
   .table-red {
-    background-color: #fed8d6;
+    background-color: rgb(247, 128, 128);
   }
   .table-gray {
     background-color: gray;
@@ -114,6 +114,12 @@
   }
   .table-white {
     background-color: white;
+  }
+  .table-yellow {
+    background-color: yellow;
+  }
+  .table-orange {
+    background-color: orange;
   }
 
   .btnLayout {
