1. 접수현황 접수,배차,픽업 건수 표시 추가 2. 로그아웃 알림창 제거

--- a/src/css/order.css
+++ b/src/css/order.css
@@ -135,4 +135,17 @@
   .tableSub {
     width: 150px;
   }
+  .delivery-status {
+    float: right;
+    display:inline-block;
+    width:125px;
+    font-size:18px;
+    border:1px solid; 
+    text-align: center;
+    margin-right: 15px;
+    margin-top: -30px;
+    border-radius: 5px;
+    height: 35px;
+    line-height: 35px;
+  }
 }
