접수현황 상태 모바일버전 수정

--- a/src/css/order_m.css
+++ b/src/css/order_m.css
@@ -172,4 +172,12 @@
   .droptable_fr {
     width: 308px;
   }
+  .delivery-status-mobile {
+    display:inline-block;
+    border:1px solid; 
+    text-align: center;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+  }
 }
