--- a/src/css/order.css
+++ b/src/css/order.css
@@ -1,6 +1,5 @@
 @media screen and (min-width: 1200px) {
-  .desk {
-  }
+  .desk {}
 
   .mobile {
     display: none !important;
@@ -34,9 +33,11 @@
   .dataTableLayout {
     margin-top: 40px;
   }
+
   .dataTableLayout2 {
     margin-top: 40px;
   }
+
   .riderTableLayout {
     min-height: 200px;
     position: absolute;
@@ -65,6 +66,7 @@
     height: 600px;
     float: left;
   }
+
   .regist-call-map {
     height: 200px;
     overflow: hidden;
@@ -82,10 +84,12 @@
     color: blue;
     text-decoration: underline;
   }
+
   .reception-box .reception-box .ant-checkbox-inner {
     width: 25px;
     height: 25px;
   }
+
   .reception-box .ant-checkbox-inner::after {
     width: 15px;
     height: 15px;
@@ -97,6 +101,14 @@
     vertical-align: top;
   }
 
+  .surcheck .ant-checkbox-wrapper {
+    margin-left: 10px !important;
+    height: 32px;
+    line-height: 32px;
+    vertical-align: middle;
+    margin-bottom: 3px;
+  }
+
   .reception-box .span1 {
     font-size: 16px;
     margin-left: 10px;
@@ -105,19 +117,24 @@
   .table-red {
     background-color: rgb(247, 128, 128);
   }
+
   .table-gray {
     background-color: gray;
   }
+
   .table-blue {
     background-color: #d6edfe;
     /* color: white; */
   }
+
   .table-white {
     background-color: white;
   }
+
   .table-yellow {
     background-color: yellow;
   }
+
   .table-orange {
     background-color: orange;
   }
@@ -129,24 +146,29 @@
   #reception-table {
     margin-top: 40px;
   }
-  #reception-table .ant-table .ant-table-tbody > tr > td:first-child {
+
+  #reception-table .ant-table .ant-table-tbody>tr>td:first-child {
     padding-left: 20px !important;
   }
-  #reception-table .ant-table .ant-table-tbody > tr > td:last-child {
+
+  #reception-table .ant-table .ant-table-tbody>tr>td:last-child {
     padding-right: 20px !important;
   }
-  #reception-table .ant-table .ant-table-thead > tr > th:last-child {
+
+  #reception-table .ant-table .ant-table-thead>tr>th:last-child {
     padding-right: 20px !important;
   }
+
   .tableSub {
     width: 150px;
   }
+
   .delivery-status {
     float: right;
-    display:inline-block;
-    width:125px;
-    font-size:18px;
-    border:1px solid; 
+    display: inline-block;
+    width: 125px;
+    font-size: 18px;
+    border: 1px solid;
     text-align: center;
     margin-right: 15px;
     margin-top: -30px;
