1. 가맹점관리,기사관리 필터,정렬 추가 2. 기사관리 일차감내역 버튼 및 창 추가 3. 출근상태 현황 추가

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2515,6 +2515,58 @@
     width: 186.82px;
   }
 
+  /* 일차감 내역 */
+  .taskWorkList-Dialog {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1100px;
+    z-index: 2;
+  }
+
+  .taskWorkList-content {
+    padding: 30px;
+    background-color: white;
+  }
+
+  .taskWorkList-title {
+    font-size: 25px;
+    font-weight: bold;
+    line-height: 30px;
+    /* width:300px; */
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  .taskWorkList-close {
+    width: 30px;
+    cursor: pointer;
+    background-color: #fddc00;
+    /* display: inline-block; */
+    float: right;
+    padding: 8px;
+  }
+
+  .taskWorkList-inner {
+    width: 100%;
+    overflow-y: scroll;
+    border: 1px solid #ccc;
+    padding: 20px;
+    text-align: left;
+    margin-top: 20px;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .taskWorkList-inner::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera*/
+  }
+
+  .listBlock {
+    margin-top: 20px;
+  }
+
   /*기사 그룹관리*/
   .riderGroup-Dialog {
     position: fixed;
