배달금액 0원 빨간색 강조표시

--- a/src/css/order_m.css
+++ b/src/css/order_m.css
@@ -94,7 +94,11 @@
   }
 
   .table-red {
-    background-color: #fed8d6;
+    background-color: rgb(255, 181, 181);
+  }
+  .table-redalert {
+    background-color: #ff0000;
+    color: white;
   }
   .table-gray {
     background-color: gray;
