--- a/src/css/order_m.css
+++ b/src/css/order_m.css
@@ -180,8 +180,10 @@
     display:inline-block;
     border:1px solid; 
     text-align: center;
-    margin-right: 5px;
-    margin-bottom: 5px;
+    margin-right: 6px;
+    margin-bottom: 10px;
     border-radius: 5px;
+    padding:5px 10px;
+    font-size:16px;
   }
 }
