가맹점 출금계정 등록,수정 api, ui 작업

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -4292,7 +4292,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.56);
     z-index: 1;
   }
 
@@ -4353,6 +4353,87 @@
   }
 
   .surchargeGroupWrapper .ant-btn-primary {
+    width: 130px;
+    height: 40px;
+    font-size: 18px;
+  }
+
+  /* 출금계정등록 dialog */
+  .registAccount-Dialog-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.56);
+    z-index: 1;
+  }
+
+  .registAccount-Dialog {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 450px;
+    border-radius: 30px;
+    z-index: 2;
+  }
+
+  .registAccount-content {
+    background-color: white;
+    padding: 30px;
+    /* text-align: left; */
+    /* color: #777; */
+  }
+
+  .registAccount-title {
+    letter-spacing: -1px;
+    font-weight: bold;
+    color: #333;
+    text-align: right;
+    display: inline-block;
+    font-size: 25px;
+    line-height: 30px;
+  }
+
+  .registAccount {
+    margin-top: 20px;
+  }
+  .registAccountlayout {
+    margin-top: 30px;
+  }
+  .registAccountlayout .contentBlock {
+    width: 400px;
+    margin: 10px 0px;
+  }
+
+  .registAccountlayout .contentBlock .override-input {
+    width: 250px;
+  }
+
+  .registAccount-close {
+    width: 30px;
+    cursor: pointer;
+    background-color: #fddc00;
+    /* display: inline-block; */
+    float: right;
+    padding: 8px;
+  }
+
+  .registAccount-Dialog .addGrouplayout {
+    height: 100px;
+  }
+
+  .registAccountWrapper .mainTitle {
+    width: 80px;
+  }
+
+  .registAccountWrapper .submitBlock {
+    margin-top: 30px;
+    text-align: center;
+  }
+
+  .registAccountWrapper .ant-btn-primary {
     width: 130px;
     height: 40px;
     font-size: 18px;
